# BOM_Check

./: .gitignore  README.md
bom_check_devkit/: README.md  pyproject.toml
bom_check_devkit/configs/: refdes_prefixes.yaml  rules.yaml
bom_check_devkit/docs/: 01_PRD.md  02_ARCHITECTURE.md  03_PDF_REFDES_EXTRACTION.md  04_BOM_PARSER_SPEC.md  05_RULE_ENGINE_SPEC.md  06_REPORT_SPEC.md  07_CODEX_TASKS.md  08_TEST_PLAN.md  09_SAMPLE_FINDINGS.md
bom_check_devkit/examples/: sample_usage.md
bom_check_devkit/scripts/: diagnose_ssh_key_windows.ps1  install_ssh_key_windows.ps1  install_windows_task.ps1  open_firewall_windows.ps1  run_web_windows.ps1  setup_windows.ps1
bom_check_devkit/src/bomcheck_toolkit/: cli.py  models.py  pipeline.py  utils.py  webapp.py
bom_check_devkit/src/bomcheck_toolkit/parsers/: bom_parser.py
bom_check_devkit/src/bomcheck_toolkit/pdf/: annotator.py  refdes_extractor.py
bom_check_devkit/src/bomcheck_toolkit/reports/: excel_report.py
bom_check_devkit/src/bomcheck_toolkit/rules/: engine.py
bom_check_devkit/tests/: test_bom_parser_realistic.py  test_bom_refdes_expand.py  test_duplicate_rules.py  test_nc_context.py  test_refdes_parser.py  test_value_mismatch.py
mac_app/: BOMCheckApp.swift  Info.plist  build_mac_app.sh
